src/objects/BMCServiceDesk__CI_Client_Link__c.object
<CustomObject>
    <description>For relationship between CIs and Clients(Users/Contacts/leads)</description>
    <fields>
        <fullName>BMCServiceDesk__Account__c</fullName>
        <formula>IF(ISBLANK(BMCServiceDesk__FKUser__r.Contact.Account.Name),BMCServiceDesk__FKUser__r.BMCServiceDesk__Account_Name__c,BMCServiceDesk__FKUser__r.Contact.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Service__c</fullName>
        <formula>BMCServiceDesk__FKBMC_BaseElement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKBMC_BaseElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Element</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>CI Client Link</relationshipLabel>
        <relationshipName>CI_Client_Link</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CI_Client_Link</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CI Client Link</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI Client Link</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>